# fetalReconstruction

./: README  README.md
source/: CMakeLists.txt
source/IRTKSimple2/: CMakeLists.txt  COPYRIGHT  DartConfiguration.tcl
source/IRTKSimple2/common++/include/: irtkCifstream.h  irtkCofstream.h  irtkCommon.h  irtkDeallocate.h  irtkException.h  irtkTimer.h
source/IRTKSimple2/common++/src/: basename.cc  dirname.cc  irtkCifstream.cc  irtkCofstream.cc  irtkCommon.cc  irtkException.cc  irtkParallel.cc  read.cc  swap.cc  uncompress.cc
source/IRTKSimple2/config/: FindTBB.cmake  IRTKConfig.cmake.in  IRTKGenerateConfigFile.cmake  IRTKInclude.cmake
source/IRTKSimple2/contrib++/include/: irtkArith.h  irtkCityBlockDistanceTransform.h  irtkEigenAnalysis.h  irtkEuclideanDistanceTransform.h  irtkMatrix3x3.h  irtkPoint4D.h  irtkVector3.h
source/IRTKSimple2/contrib++/src/: irtkArith.cc  irtkCityBlockDistanceTransform.cc  irtkEigenAnalysis.cc  irtkEuclideanDistanceTransform.cc  irtkMatrix3x3.cc  irtkPoint4D.cc  irtkVector3.cc
source/IRTKSimple2/geometry++/include/: irtkMatrix.h  irtkNeighbourhoodOffsets.h  irtkQuaternion.h  irtkScalarGaussianDx.h  irtkScalarGaussianDxDx.h  irtkScalarGaussianDxDy.h  irtkScalarGaussianDxDz.h  irtkScalarGaussianDy.h  irtkScalarGaussianDyDy.h  irtkScalarGaussianDyDz.h  irtkScalarGaussianDz.h  irtkScalarGaussianDzDz.h
source/IRTKSimple2/geometry++/src/: CMakeLists.txt  irtkQuaternion.cc  irtkScalarGaussianDx.cc  irtkScalarGaussianDxDx.cc  irtkScalarGaussianDxDy.cc  irtkScalarGaussianDxDz.cc  irtkScalarGaussianDy.cc  irtkScalarGaussianDyDy.cc  irtkScalarGaussianDyDz.cc  irtkScalarGaussianDz.cc  irtkScalarGaussianDzDz.cc  irtkVTKFunctions.cc  irtkVector3D.cc
source/IRTKSimple2/image++/include/: irtkANALYZE.h  irtkBSplineInterpolateImageFunction.h  irtkBSplineInterpolateImageFunction2D.h  irtkCSplineInterpolateImageFunction.h  irtkCSplineInterpolateImageFunction2D.h  irtkConvolution.h  irtkConvolutionWithGaussianDerivative.h  irtkConvolutionWithGaussianDerivative2.h  irtkConvolutionWithPadding_1D.h  irtkConvolutionWithPadding_2D.h  irtkConvolutionWithPadding_3D.h  irtkConvolution_1D.h  irtkConvolution_2D.h  irtkConvolution_3D.h  irtkDensity.h  irtkDilation.h  irtkErosion.h  irtkFileANALYZEToImage.h  irtkFileGIPLToImage.h  irtkFileNIFTIToImage.h  irtkFileOpenCVToImage.h  irtkFilePGMToImage.h  irtkFileToImage.h  irtkFileVTKToImage.h  irtkGIPL.h  irtkGaussianBlurring.h  irtkGaussianBlurring4D.h  irtkGaussianBlurringWithPadding.h  irtkGaussianInterpolateImageFunction.h  irtkGaussianInterpolateImageFunction2D.h  irtkGaussianNoise.h  irtkGaussianNoiseWithPadding.h  irtkGradientImage.h  irtkGradientImageFilter.h  irtkGradientImageX.h  irtkGradientImageY.h  irtkGradientImageZ.h  irtkHistogram.h  irtkHistogram_1D.h  irtkHistogram_2D.h  (+36 more)
source/IRTKSimple2/image++/src/: CMakeLists.txt  irtkAnisoDiffusion.cc  irtkBSplineInterpolateImageFunction.cc  irtkBSplineInterpolateImageFunction2D.cc  irtkCSplineInterpolateImageFunction.cc  irtkCSplineInterpolateImageFunction2D.cc  irtkConvolution.cc  irtkConvolutionWithGaussianDerivative.cc  irtkConvolutionWithGaussianDerivative2.cc  irtkConvolutionWithPadding_1D.cc  irtkConvolutionWithPadding_2D.cc  irtkConvolutionWithPadding_3D.cc  irtkConvolution_1D.cc  irtkConvolution_2D.cc  irtkConvolution_3D.cc  irtkDensity.cc  irtkDilation.cc  irtkErosion.cc  irtkFileANALYZEToImage.cc  irtkFileGIPLToImage.cc  irtkFileNIFTIToImage.cc  irtkFileOpenCVToImage.cc  irtkFilePGMToImage.cc  irtkFileToImage.cc  irtkFileVTKToImage.cc  irtkGaussianBlurring.cc  irtkGaussianBlurring4D.cc  irtkGaussianBlurringWithPadding.cc  irtkGaussianInterpolateImageFunction.cc  irtkGaussianInterpolateImageFunction2D.cc  irtkGradientImage.cc  irtkGradientImageX.cc  irtkGradientImageY.cc  irtkGradientImageZ.cc  irtkHistogram_1D.cc  irtkHistogram_2D.cc  irtkImageFunction.cc  irtkImageToFile.cc  irtkImageToFileANALYZE.cc  irtkImageToFileGIPL.cc  (+25 more)
source/IRTKSimple2/nifti/: CMakeLists.txt
source/IRTKSimple2/nifti/niftilib/: CMakeLists.txt
source/cmake/: FindCULA.cmake  FindGSL.cmake  FindSciCuda.cmake  FindTBB.cmake  SciFuncsMacros.cmake
source/reconstructionGPU2/: CMakeLists.txt  GPUWorker.cpp  GPUWorker.h  initPatchBasedRecon_gpu.cu  irtkBSplineReconstruction.h  irtkEvaluation.cpp  irtkPatchBasedReconstruction.cpp  irtkReconstruction.cc  irtkReconstructionEvaluation.cc  irtkReconstructionGPU.cc  irtkReconstructionGPU.h  irtkStack3D3DRegistration.cpp  measureVolWOBorder.cc  nullptr.h  patchBased2D3DRegistration.cpp  patchBased2D3DRegistration_gpu.cu  patchBased2D3DRegistration_gpu2.cu  patchBasedObject.cu  patchBasedPSFReconstruction_gpu.cu  patchBasedPackageSplitter.cpp  patchBasedReconMain.cpp  patchBasedRobustStatistics_gpu.cu  patchBasedSimulatePatches_gpu.cu  patchBasedSimulateSlices_gpu.cu  patchBasedSuperresolution_gpu.cu  perfstats.h  reconVolume.cu  recon_volumeHelper.cuh  reconstruction.cc  reconstruction_cuda2.cu  reconstruction_cuda2.cuh  runSLIC_2D.c  runStackSLIC.cpp  stackMotionEstimator.cpp  stackMotionEstimator.h  testpatchBasedVolume.cu  testpatchBasedVolumeMain.cpp  volume.cu
source/reconstructionGPU2/GPUGauss/: gaussFilterConvolution.cuh  gaussfilter.cu  patchBasedGaussfilter.cu
source/reconstructionGPU2/include/: GPUWorker.h  ImagePatch2D.cuh  interpFunctions.cuh  irtkEvaluation.h  irtkPatchBasedReconstruction.h  irtkReconstructionGPU.h  irtkStack3D3DRegistration.h  matrix4.cuh  nDRegistration.h  patchBased2D3DRegistration.h  patchBased2D3DRegistration_gpu.cuh  patchBased2D3DRegistration_gpu2.cuh  patchBasedLayeredSurface3D.cuh  patchBasedObject.cuh  patchBasedPackageSplitter.h  patchBasedRobustStatistics_gpu.cuh  patchBasedSuperresolution_gpu.cuh  patchBasedVolume.cuh  perfstats.h  pointSpreadFunction.cuh  reconConfig.cuh  reconVolume.cuh  recon_volumeHelper.cuh  reconstruction_cuda2.cuh  runStackSLIC.h  stackMotionEstimator.h  volume.cuh
source/reconstructionGPU2/smallPatchesHybridReg/: CMakeLists.txt  ccSimilarityMetric.cu  ccSimilarityMetric.cuh  irtkImageRigidRegistrationWithPadding_hybrid.cc  irtkImageRigidRegistrationWithPadding_hybrid.h
(+6 files in other folders)
